--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -117,7 +117,7 @@
       <p class="sub_title">Track, manage, and sync your project hours effortlessly with our smart timesheet solution</p>
       <p class="sub_title" style="color:#ceccc8;">Simplify timesheets, amplify productivity</p>
       <form action="/home" method="get" style="margin:0;">
-        <button type="submit" class="dashboard-btn">Go to Logsy</button>
+        <button type="submit" class="dashboard-btn">Get Started</button>
       </form>
     </div>
   </div>
